--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="build">110</string>
  	<string name="build">110</string>
 	<string name="namespace">com.rozen.wordscroll</string>
+	
+	<string name="admob_pub_id_game_surface">ca-app-pub-7811514377323585/9490104351</string> 
 
 	<string name="game_surface_played_words">played words</string>
 	<string name="scoreboard_countdown_start">5:00</string>
@@ -33,12 +35,15 @@
 	<string name="share_subject">Fragoo</string>
 	<string name="share_message">Check out Fragoo for Android in the Google Play store.  Test your word building skills as the letters snake by.  How many words can you build???</string>
 
-	<string name="full_rules_1">The idea is to Score as many points as you possibly can by building words (the longer the better) before the countdown is completed.</string>
-	<string name="full_rules_2">To start the game, just tap the Start button.  That kicks off the 5 minute countdown timer. Three possible words will be preset for you with fragments of words.  Your job is to determine what words can be formed by each fragment and use the letter tiles that are snaking by in the bottom area to build those words.  The top row of moving tiles is used for Word 1.  The middle row is used for Word 2.  The bottom row is used for Word 3.  As you tap letter tiles, they are added to the left-most empty tile of the particular word for the row the ta[pped tile belonged to.  If you make a mistake and want to remove a letter from a word, just tap that letter\'s tile and it will be removed - except for the preset letters in the word fragment which cannot be changed.</string>
-	<string name="full_rules_3">No formal words or hyphenated words are allowed. Words can be from 2 to 10 letters long. After you build a word (for example, Word 1), just tap the "Play" button at the bottom corresponding to that word (in our example, tap the "Play Word 1" button). A specific word can only be played once per game.</string>
-	<string name="full_rules_4">Remember to tap the letters to add them to the played word.  Don\'t drag them, it does not work.  The game was built for pure finger-tapping speed.</string>  
-	<string name="full_rules_letters_1">The Letters</string>
-	<string name="full_rules_letters_2">102 letters are shuffled and continously snake around 3 rows.  The mix of the 102 letters is as follows:</string> 
+	<string name="full_rules_1">The idea is to score as many points as you possibly can by building words (the longer the better) before the countdown is completed.</string>
+	<string name="full_rules_2">To start the game, just tap the Start button.  That kicks off the 5 minute countdown timer. The three words will be preset for you with letters or word fragments.  Your job is to determine what words can be formed from each fragment using the letter tiles from the hopper that are scrolling by in the bottom area.  </string>
+	<string name="full_rules_3">The top row of the scrolling hopper is used for Word 1.  The middle row is used for Word 2.  The bottom row is used for Word 3.  As you tap letter tiles in the scrolling hopper, those letters are added to the left-most empty tile of the particular word for the row the tapped tile belonged to.</string>
+	<string name="full_rules_4">If you make a mistake and want to remove a letter from a word, just tap that letter\'s tile and it will be removed - except for the preset letters in the word fragment which cannot be changed.</string>
+	<string name="full_rules_5">No formal words or hyphenated words are allowed. Words can be from 2 to 10 letters long.</string> 	    
+	<string name="full_rules_6">After you build a word (for example, Word 1), just tap the "Play" button at the bottom corresponding to that word (in our example, tap the "Play Word 1" button). A specific word can only be played once per game.</string>
+	<string name="full_rules_7">Remember to tap the letters in the scrolling hopper to add them to the played word.  Don\'t drag them, it does not work.  The game was built for pure finger-tapping speed. Letters can ony be used once per \'row scroll\' but after that they can be used again.</string>  
+	<string name="full_rules_letters_1">THE LETTERS</string>
+	<string name="full_rules_letters_2">102 letters are added to the hopper, shuffled, and continuously scroll around 3 rows.  The mix of the 102 letters is as follows:</string> 
 
    <string name="full_rules_letter1_num">A - 8</string>
 	<string name="full_rules_letter2_num">B - 2</string>
@@ -67,26 +72,22 @@
 	<string name="full_rules_letter25_num">Y - 2</string>
 	<string name="full_rules_letter26_num">Z - 1</string>
 	
-	<string name="full_rules_scoring_1">Scoring</string>
-	<string name="full_rules_scoring_2">Scoring is simple and based on the length of the played word. Letters 1 - 3 of a word are worth 1 point each.  Letters 4 - 6 are 
+	<string name="full_rules_dictionary_1">THE DICTIONARY</string>
+	<string name="full_rules_scoring_1">SCORING</string>
+	<string name="full_rules_scoring_2">Scoring is simple and based on the length of the played word. Letters 1 - 3 of a word are worth 1 point each.  Letters 4 - 6 are worth 3 points each.  Letters 7 - 9 are worth 5 points each.  Letter 10 is worth 10 points. </string> 
+	<string name="full_rules_scoring_3">So, for example, if you played the word KNUCKLES, it would be worth 22 points. 1 point each for "K", "N", and "U".  Then 3 points each for "C", "K", and "L".  Finally, "E" and "S", being letters 7 and 8, would be worth 5 points each.</string>
+	<string name="full_rules_scoring_4">By contrast, the word "FLY", which only contains letters 1, 2, and 3, is only worth 3 points. As you can see, the longer the word, the more points you will earn for a particular word.</string>
+	<string name="full_rules_scoring_5">The only exception to the rule, however, is the occasional Bonus +10 tile that will scroll across among the other tiles.  If you are able to use the bonus letter in a word, 10 points is added to the word.  In fact, if you get really lucky and can use more than one bonus letter in a word, 10 points is added to the word for each bonus letter used.</string>
+	<string name="full_rules_scoring_6">For example, in the "FLY" example above, if the "Y" had been from a Bonus +10 tile, the word would have been worth 13 points as opposed to 3.</string>    
+	<string name="full_rules_scoring_7">Finally, the points from each word played are added together to arrive at the score for the game. </string>
+		 <string name="game_surface_game_over">Game Over</string>
+	 <string name="game_surface_interstital_purchase_title">get rid of ads?</string>
+	 <string name="game_surface_interstital_purchase_text">Want to get rid of ads between games?  No problem.  Just get a Premium Upgrade or a No Ads Between Games Upgrade.</string>
 
-worth 3 points each.  Letters 7 - 9 are worth 5 points each.  Letter 10 is worth 10 points.  
-
-So, for example, if you played the word KNUCKLES, it would be worth 22 points. 1 point each for "K", "N", and "U".  Then 3 points 
-
-each for "C", "K", and "L".  Finally, "E" and "S", being letters 7 and 8, would be worth 5 points each.
-
-By contrast, the word "FLY", which only contains letters 1, 2, and 3, is only worth 3 points.
-
-As you can see, the longer the word, the more points you will earn for a particular word.
-
-The only exception to the rule, however, is the occasional Bonus +10 tile that will scroll across among the other tiles.  If you are 
-
-able to use the bonus letter in a word, 10 points is added to the word.  In fact, if you get really lucky and can use more than one 
-
-bonus letter in a word, 10 points is added to the word for each bonus letter used.  For example, in the "FLY" example above, if the 
-
-"Y" had been from a Bonus +10 tile, the word would have been worth 13 points as opposed to 3.    
-
-The points from each word played are added together to arrive at the score for the game. </string>
+	 <string name="game_surface_start_game_ready">ready&#8230;</string>
+	 <string name="game_surface_start_game_set">set&#8230;</string>
+	 <string name="game_surface_start_game_go">GO!!!</string>
+	 <string name="game_surface_first_time_alert_message">Tap START to begin the game.  Tap (don\'t drag) the letters in your tray to
+form a word.  Tap the PLAY button when you
+have created your word.  Do this as many times as you can...but do it quickly!\n\nRemember, you\'re racing the clock AND your opponent!</string>
 </resources>
