--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,16 +1,38 @@
 <resources>
 
-    <string name="app_name">Fragoo</string>
+    <string name="app_name">Loopd</string>
 	<string name="version">1.0</string>
     <string name="versionName">Aardvark</string>
     <string name="build">110</string>
  	<string name="build">110</string>
-	<string name="namespace">com.rozen.wordscroll</string>
+	<string name="namespace">com.riotapps.loopd</string>
+	
+	<string name="wordnik_apiKey">48f31f368d20791114b01067e1d05b68ca177aabdbab4150b</string>
+    <string name="chartboost_app_id">5298cf352d42da443f2a3ec9</string>
+    <string name="chartboost_app_signature">ac3a8580a3e11c07f085f791f93d0c1098891666</string>
+      
+    <string name="IAB_1">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8</string>
+	<string name="IAB_2">AMIIBCgKCAQEAlBIwQuDnuhgVuFLgheCrB7</string>
+	<string name="IAB_3">xytZKBuHhm3pG/er4QosMn6z4cwTp3</string>
+	<string name="IAB_4">gmmZz0vzTO0Cv7GzYgTUT+CrYAcgFp</string>
+	<string name="IAB_5">GKAdnGKL/nzD7IGc9NnckV/5t+kqLHnSQY</string>
+	<string name="IAB_6">4wS9d6jRKg4YiM9dk8ozK2NjHwwP/4</string>
+	<string name="IAB_7">gaVqEnoGRIRiF8WPKXDTk923Wt7al8</string>
+	<string name="IAB_8">dGhtJcH9cb9LYUU+G1BCn//Y7A</string>
+	<string name="IAB_9">zm9pcX69urLUpO8aDpnQPr7TWBWSp</string>
+	<string name="IAB_10">6g1i2vnp1iFmj++NZV0dbrGtrYTiit</string>
+	<string name="IAB_11">NCx4tzeYIimCsQj3gL1fRPqzgeTQvNP</string>
+	<string name="IAB_12">2/Tvdm2WOzxBtKBXm5TLQn+A8GanIP</string>
+	<string name="IAB_13">iEAwSJGLARaCEi+K7ZRwIDAQAB</string>
+	
+	<string name="SKU_GOOGLE_PLAY_PREMIUM_UPGRADE">riotapps_loopd_premium_upgrade.a</string>
 	
 	<string name="admob_pub_id_game_surface">ca-app-pub-7811514377323585/9490104351</string> 
-
+	<string name="admob_pub_id_full_rules">ca-app-pub-7811514377323585/6536637953</string>
+ 	<string name="admob_pub_id_about">ca-app-pub-7811514377323585/3583171551</string>
+ 	
 	<string name="game_surface_played_words">played words</string>
-	<string name="scoreboard_countdown_start">5:00</string>
+	<string name="scoreboard_countdown_start">4:08</string>
 	<string name="scoreboard_countdown">%1$s:%2$s</string>
  	<string name="scoreboard_countdown_completed">0:00</string>
  	
@@ -26,14 +48,14 @@
 	<string name="game_surface_played_word_3">WORD 3</string>
 	
 	<string name="game_surface_countdown">countdown:</string>
-	<string name="game_surface_score">score:</string>
-	<string name="game_surface_top_score">top score:</string>
+	<string name="game_surface_score">score</string>
+	<string name="game_surface_top_score">top score</string>
 	
-	<string name="main_menu_about">About Fragoo</string>
+	<string name="main_menu_about">About Loopd</string>
 	<string name="about_device_specs">This device is %1$s size with %2$s resolution.</string>
-	<string name="about_main">Fragoo by Rozen Studios</string> 
-	<string name="share_subject">Fragoo</string>
-	<string name="share_message">Check out Fragoo for Android in the Google Play store.  Test your word building skills as the letters snake by.  How many words can you build???</string>
+	<string name="about_main">Loopd by RiotApps</string> 
+	<string name="share_subject">Loopd for Android</string>
+	<string name="share_message">Check out Loopd for Android in the Google Play store.  Test your word building skills as the letters snake by.  How many words can you build???</string>
 
 	<string name="full_rules_1">The idea is to score as many points as you possibly can by building words (the longer the better) before the countdown is completed.</string>
 	<string name="full_rules_2">To start the game, just tap the Start button.  That kicks off the 5 minute countdown timer. The three words will be preset for you with letters or word fragments.  Your job is to determine what words can be formed from each fragment using the letter tiles from the hopper that are scrolling by in the bottom area.  </string>
@@ -74,12 +96,13 @@
 	
 	<string name="full_rules_dictionary_1">THE DICTIONARY</string>
 	<string name="full_rules_scoring_1">SCORING</string>
-	<string name="full_rules_scoring_2">Scoring is simple and based on the length of the played word. Letters 1 - 3 of a word are worth 1 point each.  Letters 4 - 6 are worth 3 points each.  Letters 7 - 9 are worth 5 points each.  Letter 10 is worth 10 points. </string> 
+	<string name="full_rules_scoring_2">Scoring is simple and mostly based on the length of the played word. Letters 1 - 3 of a word are worth 1 point each.  Letters 4 - 6 are worth 3 points each.  Letters 7 - 9 are worth 5 points each.  Letter 10 is worth 10 points. </string> 
 	<string name="full_rules_scoring_3">So, for example, if you played the word KNUCKLES, it would be worth 22 points. 1 point each for "K", "N", and "U".  Then 3 points each for "C", "K", and "L".  Finally, "E" and "S", being letters 7 and 8, would be worth 5 points each.</string>
 	<string name="full_rules_scoring_4">By contrast, the word "FLY", which only contains letters 1, 2, and 3, is only worth 3 points. As you can see, the longer the word, the more points you will earn for a particular word.</string>
-	<string name="full_rules_scoring_5">The only exception to the rule, however, is the occasional Bonus +10 tile that will scroll across among the other tiles.  If you are able to use the bonus letter in a word, 10 points is added to the word.  In fact, if you get really lucky and can use more than one bonus letter in a word, 10 points is added to the word for each bonus letter used.</string>
-	<string name="full_rules_scoring_6">For example, in the "FLY" example above, if the "Y" had been from a Bonus +10 tile, the word would have been worth 13 points as opposed to 3.</string>    
-	<string name="full_rules_scoring_7">Finally, the points from each word played are added together to arrive at the score for the game. </string>
+	<string name="full_rules_scoring_5">In addition, if there are blank tiles to the left of the preset tiles, you\'ll earn 2 points for each of them if you play that particular word.</string>
+	<string name="full_rules_scoring_6">Also, an occasional Bonus +10 tile will scroll across among the other tiles.  If you are able to use the bonus letter in a word, 10 points is added to the word.  In fact, if you get really lucky and can use more than one bonus letter in a word, 10 points is added to the word for each bonus letter used.</string>
+	<string name="full_rules_scoring_7">For example, in the "FLY" example above, if the "Y" had been from a Bonus +10 tile, the word would have been worth 13 points as opposed to 3.</string>    
+	<string name="full_rules_scoring_8">Finally, the points from each word played are added together to arrive at the score for the game. </string>
 		 <string name="game_surface_game_over">Game Over</string>
 	 <string name="game_surface_interstital_purchase_title">get rid of ads?</string>
 	 <string name="game_surface_interstital_purchase_text">Want to get rid of ads between games?  No problem.  Just get a Premium Upgrade or a No Ads Between Games Upgrade.</string>
