--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -126,10 +126,29 @@ have created your word.  Do this as many times as you can...but do it quickly!\n
 	 <string name="game_completed_tied_top_score_message">You tied your top score!</string>
 	 <string name="game_completed_since_last_top_score_title">Keep trying!</string>
 	 <string name="game_completed_since_last_top_score_message">It\'s been %s games since your last top score!</string>
-	 <string name="game_completed_no_top_score_title">Keep at it!</string>
-	 <string name="game_completed_no_top_score_message">Your new top score could only be a game away!</string>
 	 <string name="game_completed_within_10_top_score_title">So close!</string>
 	 <string name="game_completed_within_10_top_score_message">You\'re not far from a new top score!</string>
 	 <string name="game_completed_within_3_top_score_title">Almost!</string>
 	 <string name="game_completed_within_3_top_score_message">So close to your top score!</string>
+	 
+	  <string name="game_completed_no_top_score_title_1">Keep at it!</string>
+	 <string name="game_completed_no_top_score_message_1">Your new top score could only be a game away!</string>
+	  <string name="game_completed_no_top_score_title_2">Don\'t give up!</string>
+	 <string name="game_completed_no_top_score_message_2">Another game is waiting.  Your top score is calling!</string>
+	   <string name="game_completed_no_top_score_title_3">Not bad!</string>
+	 <string name="game_completed_no_top_score_message_3">Keep pushing to get a new top score!</string>
+	   <string name="game_completed_no_top_score_title_4">Keep it up!</string>
+	 <string name="game_completed_no_top_score_message_4">A new top score is within your reach!</string>
+	   <string name="game_completed_no_top_score_title_5">Keep at it!</string>
+	 <string name="game_completed_no_top_score_message_5">Your new top score could only be a game away!</string>
+	 	   <string name="game_completed_no_top_score_title_6">Keep at it!</string>
+	 <string name="game_completed_no_top_score_message_6">Your new top score could only be a game away!</string>
+	 	   <string name="game_completed_no_top_score_title_7">Keep at it!</string>
+	 <string name="game_completed_no_top_score_message_7">Your new top score could only be a game away!</string>
+	 	   <string name="game_completed_no_top_score_title_8">Keep at it!</string>
+	 <string name="game_completed_no_top_score_message_8">Your new top score could only be a game away!</string>
+	 	   <string name="game_completed_no_top_score_title_9">Keep at it!</string>
+	 <string name="game_completed_no_top_score_message_9">Your new top score could only be a game away!</string>
+	 	   <string name="game_completed_no_top_score_title_10">Keep at it!</string>
+	 <string name="game_completed_no_top_score_message_10">Your new top score could only be a game away!</string>
 </resources>
